--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <base href=".">
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="The best client for Rick and Morty API"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Richard et Mortimer</title>
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
