--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" href="/logo192.svg" />
     <link rel="manifest" href="/manifest.json" />
     <title>Richard et Mortimer</title>
+    <script defer data-domain="richard-et-mortimer.eravana.fr" src="https://plausible.dwarfcavern.fr/js/script.js"></script>
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
